--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "angular-code-input": "^2.0.0",
     "bootstrap": "^5.3.3",
     "ng-openapi-gen": "^0.52.0",
     "rxjs": "~7.8.0",
